2003-09-02  Mo DeJong  <mdejong@users.sourceforge.net>

	* Makefile.in: Update the tclblendDist rule
	so that win/libjvm.dll.a is included in the
	tar and zip files.

2003-08-17  Mo DeJong  <mdejong@users.sourceforge.net>

	* docs/website/faq.html: Add entry about stubs.
	* docs/website/index.html: Add 1.3.1 release news.

2003-08-07  Mo DeJong  <mdejong@users.sourceforge.net>

	Add tcljava-131-2003-08-07 tag to mark the
	1.3.1 release.

2003-08-07  Mo DeJong  <mdejong@users.sourceforge.net>

	* Makefile.in: Create a tmp directory and
	run install check for tclblend in this
	dir. This avoids a problem under Windows
	where the install rule crashes when a
	tclblend.dll is loaded from two different
	localtions on the file system.
	* jtclsh.in: Set the PATH env var to
	include Java and Tcl Blend shared lib locations.

2003-07-25  Mo DeJong  <mdejong@users.sourceforge.net>

	* Makefile.in: Fix install of xputils package
	so that it works when built outside the src dir.
	* configure: Regen.
	* tcljava.m4 (TCLJAVA_CHECK_TCLSH): Fix
	the TCLSH_LOC and TCLSH paths so that the
	install rule works under Win32 in both
	regular and debug mode.

2003-07-25  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/jacl/tcl/lang/Parser.java: Set the
	interp result directly instead of trying
	to append to the result object since appending
	is known to not work.

2003-07-25  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/pkgIndex.tcl:
	* src/jacl/tcl/lang/Interp.java:
	* src/tcljava/tcl/lang/BlendExtension.java:
	* unix/tools/vutil/current:
	* win/makefile.vc: Update version numbers
	in files as a result of running `make dist`.

2003-07-25  Mo DeJong  <mdejong@users.sourceforge.net>

	* configure: Regen.
	* configure.in: Update version number to 1.3.1.

2003-07-25  Mo DeJong  <mdejong@users.sourceforge.net>

	* README.jacl:
	* README.tclblend: Update to mention that scripts
	need to be installed before running and that
	Tcl 8.4.4 is the min 8.4 version that Tcl Blend